syntax = "proto3";

package proto;

// block-wise matrix data service
service BlockData {
  rpc GetTShard(Request) returns (Response) {}
  rpc GetDShard(Request) returns (Response) {}
}

message Request {
  // uint64 epoch = 1;
  // repeated int32 indices = 2;
}

message Response {
  uint64 blockId = 1;
  MatrixShard shard = 2;
}

message MatrixShard {
  message Row {
    uint32 rowId = 1;
    repeated uint32 colIds = 2;
    repeated float values = 3;
  }
  repeated Row rows = 1;
}
